# cfpi

./: .gitignore  .gitmodules  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
cfpi/: __init__.py  __main__.py  checkpoint_config.py  conf.py  envs.py
cfpi/core/: __init__.py  gtimer.py  multiprocessing.py  rl_algorithm.py
cfpi/core/logging/: __init__.py  eval_util.py  tabulate.py
cfpi/data_management/: __init__.py  env_replay_buffer.py  hdf5_path_loader.py  replay_buffer.py  simple_replay_buffer.py
cfpi/launchers/: __init__.py  pipeline.py  pipeline_pieces.py
cfpi/policies/: __init__.py  gaussian_policy.py  simple.py  stochastic.py
cfpi/pytorch/: normalizer.py  torch_rl_algorithm.py
cfpi/pytorch/algorithms/cfpi/: deterministic.py  iql.py  mixture_gaussian.py  single_gaussian.py  vae.py
cfpi/pytorch/algorithms/policy_training/: bc.py
cfpi/pytorch/algorithms/q_training/: ensemble_iql.py  sarsa_iqn.py
cfpi/pytorch/networks/: __init__.py  distribution_generator.py  mlp.py
cfpi/samplers/: path_collector.py  rollout_functions.py
cfpi/variants/: SUPPORTED_ALGORITHMS.py
cfpi/variants/base/: __init__.py  algorithm.py  policy.py  q.py  trainer.py  variant.py
cfpi/variants/bc/: algorithm.py  policy.py  trainer.py  variant.py
cfpi/variants/mg/: algorithm.py  trainer.py  variant.py
cfpi/variants/sarsa_iqn/: variant.py
cfpi/variants/sg/: trainer.py  variant.py
docker/: Dockerfile  README.md
scripts/: delmlock
